# video_interaction_filter

./: .gitignore  CLAUDE.md  README.md  benchmark.py  config.py  main.py  pyproject.toml
.Jules/: palette.md
core/: comparator.py  interaction_filter.py
detectors/: depth_estimator.py  pose_detector.py
scripts/: automate_prs.py
tests/: test_cli.py  test_comparator.py  test_geometry.py  test_integration.py
utils/: cli.py  geometry.py  visualization.py
