[project]
name = "video-interaction-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "depth-anything-v2>=0.1.0",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "torch>=2.7.1",
    "transformers>=4.57.6",
    "ultralytics>=8.4.7",
    "lapx>=0.5.5",
]
